--- a/Website/HTML/Index.html
+++ b/Website/HTML/Index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{ % block title %} Index {% endblock}
+{% block title %} Index {% endblock %}
 
 {% block content %}
 <h1>
