--- a/Website/HTML/navbar.html
+++ b/Website/HTML/navbar.html
@@ -1,7 +1,10 @@
 <div>
-    <span><a href="{% url 'index' %}">Home</a></span>
-    <span><a href="{% url 'about' %}">About</a></span>
-    <span><a href="{% url 'contact' %}">Contact</a></span>
+    {% url 'public:index' as index_url %}
+    <span><a href="{{ index_url }}">Home</a></span>
+    {% url 'public:about' as about_url %}
+    <span><a href="{{ about_url }}">About</a></span>
+    {% url 'public:contact' as contact_url %}
+    <span><a href="{{ contact_url }}">Contact</a></span>
 
     <span style="float:right">
         <!--would recommend using facade to wrap for scalability ensure loose coupling -->
