--- a/Website/HTML/Index.html
+++ b/Website/HTML/Index.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %} Index {% endblock %}
 
 {% block content %}
+<img class="masthead-avatar mb-5" src="{% static 'images/Building_Arch1.jpg' %}" alt="..." />
+
 <h1>
     Index Homepage
 </h1>
