--- a/Website/HTML/Index.html
+++ b/Website/HTML/Index.html
@@ -4,9 +4,10 @@
 {% block title %} Index {% endblock %}
 
 {% block content %}
-<img class="masthead-avatar mb-5" src="{% static 'images/Building_Arch1.jpg' %}" alt="..." />
 
 <h1>
     Index Homepage
 </h1>
+<img class="masthead-avatar mb-5" src="{% static 'images/Building_Arch1.jpg' %}" alt="..." style="width:700px;height:800px;"/>
+
 {% endblock %}
