--- a/Website/HTML/navbar.html
+++ b/Website/HTML/navbar.html
@@ -1,3 +1,24 @@
+<nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+    <div class="container">
+        <a class="navbar-brand" href="#page-top">IMM</a>
+        <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto">
+                {% url 'public:index' as index_url %}
+                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ index_url }}">Home</a></li>
+                {% url 'public:about' as about_url %}
+                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ about_url }}">About</a></li>
+                {% url 'public:contact' as contact_url %}
+                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ contact_url }}">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!--
 <div>
     {% url 'public:index' as index_url %}
     <span><a href="{{ index_url }}">Home</a></span>
@@ -7,7 +28,6 @@
     <span><a href="{{ contact_url }}">Contact</a></span>
 
     <span style="float:right">
-        <!--would recommend using facade to wrap for scalability ensure loose coupling -->
         {% if user.is_authenticated %}
             <span>Hello {{ user.username }}!</span>
             {% url 'accounts:logout' as logout_url %}
@@ -18,4 +38,4 @@
         {% endif %}
 
     </span>
-</div>
+</div> -->
