--- a/Website/HTML/base.html
+++ b/Website/HTML/base.html
@@ -21,8 +21,8 @@
     <body>
         {% include 'navbar.html' %}
 
-        <main>
-            <!--will use sub templates to extend and override-->
+        <main id="main" >
+            <!--will use sub templates to extend and override -->
             {% block content %}
             {% endblock %}
         </main>
